--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,29 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/home_nav_graph">
 
 
-
+    <include app:graph="@navigation/home_nav_graph" />
     <include app:graph = "@navigation/search_nav_graph"/>
     <include app:graph = "@navigation/cart_nav_graph"/>
     <include app:graph = "@navigation/profile_nav_graph"/>
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.keepplaying.presentation.home_menu.home.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <argument
-            android:name="uid"
-            app:nullable="false"
-            app:argType="string"/>
-        <argument
-            android:name="nombre"
-            app:nullable="false"
-            app:argType="string"/>
-        <argument
-            android:name="apellido"
-            app:nullable="false"
-            app:argType="string"/>
-    </fragment>
+
 </navigation>
