--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,12 @@
     <color name="blu">#0029FF</color>
     <color name="xbox_green">#107C10</color>
     <color name="switch_red">#E60012</color>
+
+
+    <color name="ecommerce_black">#060606</color>
+    <color name="ecommerce_gray_1">#3F3C3C</color>
+    <color name="ecommerce_gray_2">#5E5A5A</color>
+    <color name="ecommerce_gray_3">#ADADAD</color>
+    <color name="ecommerce_gray_4">#C4C4C4</color>
+    <color name="ecommerce_gray_5">#F3F3F3</color>
 </resources>
