--- a/app/src/main/res/layout/fragment_playstation.xml
+++ b/app/src/main/res/layout/fragment_playstation.xml
@@ -9,34 +9,20 @@
 
 
 
+
     <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ZONA PLAYSTATION"
+        android:layout_marginTop="12dp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.573"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="224dp"
-        android:text="Not found :("
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.578"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
-
+        app:layout_constraintTop_toBottomOf="@+id/imageView8"
+        tools:text="Adidas" />
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="113dp"
@@ -57,5 +43,30 @@
         android:src="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPlay"
+        android:layout_width="409dp"
+        android:layout_height="521dp"
+        tools:listitem="@layout/item_product"
+        android:visibility="gone"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <include
+        android:id="@+id/lsLoadingScreen"
+        layout="@layout/shimmer_search_result"
+        android:layout_width="413dp"
+        android:layout_height="535dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        tools:layout_editor_absoluteX="-2dp" />
+    <include
+        android:id="@+id/lsEmptyScreen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        layout="@layout/empty_state_search_result"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
